Separate routing logic for FHC and test sending on real device (non operational)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         android:normalScreens="true"/>
 
     <application
+        android:testOnly="false"
         android:largeHeap="true"
         android:supportsRtl="true"
         android:allowBackup="false"
