[WIP] Built in Tor

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -96,9 +96,13 @@ dependencies {
 
     // Legacy
     implementation 'com.google.protobuf:protobuf-java:3.9.2'
-    implementation 'com.squareup.okhttp3:okhttp:3.12.11'
     implementation 'net.jcip:jcip-annotations:1.0'
     implementation 'org.slf4j:slf4j-api:1.7.30'
+
+    // Built-in Tor
+    implementation 'com.squareup.okhttp3:okhttp:4.9.0'
+    implementation 'info.guardianproject:tor-android:0.4.6.7'
+    implementation 'info.guardianproject:jtorctl:0.4.5.7'
 
     // Android tests
     testImplementation 'junit:junit:4.12'
