--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,10 +67,10 @@ dependencies {
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'androidx.work:work-runtime:2.7.1'
     implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'androidx.biometric:biometric:1.1.0'
     implementation 'com.cottacush:CurrencyEditText:0.0.10'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'com.google.code.ndef-tools-for-android:ndeftools:1.2.4'
+    implementation 'com.guardanis:applock:3.0.2'
 
     implementation('com.journeyapps:zxing-android-embedded:4.2.0') {
         // We use zxing sources with fixed List.sort which is not in API21
