Use `secp256k1-kmp-jni` as native lib

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,6 +79,7 @@ dependencies {
 
     // Immortan
     implementation 'org.scala-lang:scala-library:2.11.12'
+    implementation 'fr.acinq.secp256k1:secp256k1-kmp-jni-android:0.5.2'
     implementation 'org.scala-lang.modules:scala-parser-combinators_2.11:2.1.0'
     implementation 'com.softwaremill.quicklens:quicklens_2.11:1.7.5'
     implementation 'com.typesafe.akka:akka-actor_2.11:2.3.14'
