--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,13 @@
 buildscript {
     repositories {
-        maven { url 'https://jitpack.io' }
         mavenCentral()
         google()
+        maven {
+            url 'https://jitpack.io'
+            content {
+                includeGroupByRegex "com\\.github.*"
+            }
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.4'
@@ -12,7 +17,6 @@ buildscript {
 
 allprojects {
     repositories {
-        maven { url 'https://jitpack.io' }
         mavenCentral()
         google()
     }
