--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ android {
         if (System.getenv("SIGNING_KEY_ALIAS")) {
             signingConfig signingConfigs.release
         }
+        vectorDrawables.generatedDensities = []
     }
 
     dexOptions {
@@ -53,8 +54,8 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
 
     applicationVariants.all { variant ->
@@ -65,6 +66,7 @@ android {
 
     packagingOptions {
         exclude 'META-INF/**'
+        exclude 'META-INF/services/java.security.Provider'
     }
 }
 
@@ -109,4 +111,16 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+}
+
+tasks.withType(Jar).configureEach {
+    doLast {
+        manifest.attributes['Built-By'] = 'deterministic-build'
+        manifest.attributes['Build-Date'] = '1970-01-01T00:00:00Z'
+    }
+}
+
+tasks.withType(Jar).configureEach {
+    outputs.upToDateWhen { false }
+    from { files.sort() }
 }
