Add Nostr Wallet Connect (NWC) support
Features:
- NWC protocol implementation with Nostr relay connection
- Send (Full Access) and Receive Only connection types
- NWCActivity for managing app connections
- NWC settings integration in SettingsActivity
- NWC database for storing connections
- NWC crypto for key management

Files added:
- NWCActivity.scala - Main NWC management UI
- nwc/IMMORTANBridge.scala - Bridge to wallet functionality
- nwc/NWCCrypto.scala - Cryptographic operations
- nwc/NWCDatabase.scala - Connection storage
- nwc/NWCManager.scala - Connection lifecycle management
- nwc/NWCProtocol.scala - NIP-47 protocol implementation
- nwc/NostrRelay.scala - WebSocket relay connection
- activity_nwc.xml, frag_nwc_connection.xml - Layouts

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -154,5 +154,11 @@
             android:screenOrientation="portrait"
             android:theme="@style/AppThemeNoActionBar"/>
 
+        <activity
+            android:name="finance.valet.NWCActivity"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppThemeNoActionBar"/>
+
     </application>
 </manifest>
